K8sConfiguration/mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodbexpress-deployment
  labels:
    app: mongodbexpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodbexpress
  template:
    metadata:
      labels:
        app: mongodbexpress
    spec:
      containers:
      - name: mongodbexpress
        image: mongo-express
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8081
