K8sConfiguration/ingresssample.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress-service
  labels:
    name: mongoexpress-service
spec:
  rules:
  - host: myhost.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mongoexpress-service
            port: 
              number: 8081
